First module: office
Getting ready: layout, i18n
I have to write a new form for this module which will let us create
a new office. Right now without javascript, but if I want it to seem
"professional" I will have to finish using javascript...

--- a/apps/companyfront/config/routing.yml
+++ b/apps/companyfront/config/routing.yml
@@ -6,6 +6,12 @@ homepage:
   url:   /
   param: { module: default, action: index }
 
+office_index:
+  url:     /office/index
+  class:   sfDoctrineRoute
+  param:   { module: office, action: index }
+  options: { model: Office, type: object }
+
 # generic rules
 # please, remove them by adding more specific rules
 default_index:
