--- a/apps/companyfront/config/view.yml
+++ b/apps/companyfront/config/view.yml
@@ -12,9 +12,9 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:    [inadminpanel/style.css, inadminpanel/niceforms-default.css, jquery.treeTable.css]
 
-  javascripts:    []
+  javascripts:    [jquery-1.6.2.min.js, jquery.treeTable.js, inadminpanel/ddaccordion.js]
 
   has_layout:     true
   layout:         layout
