Create, edit, remove office.
Right now very simple, wihtout using javascript.
In the future many improvements if I use javascript.

--- a/apps/companyfront/config/routing.yml
+++ b/apps/companyfront/config/routing.yml
@@ -8,7 +8,7 @@ homepage:
   param:   { module: office, action: index }
   options: { model: Office, type: object }
 
-office_index:
+offices_index:
   url:     /office/index
   class:   sfDoctrineRoute
   param:   { module: office, action: index }
