--- a/apps/companyfront/config/app.yml
+++ b/apps/companyfront/config/app.yml
@@ -3,7 +3,7 @@
 
 # default values
 all:
-  max_jobs_on_category: 3
+  max_offices_on_pager: 3
 
   sf_guard_plugin:
      remember_key_expiration_age: 2592000             # 30 days in seconds
