--- a/plugins/sfDoctrineGuardPlugin/data/fixtures/fixtures.yml
+++ b/plugins/sfDoctrineGuardPlugin/data/fixtures/fixtures.yml
@@ -1,5 +1,6 @@
 sfGuardUser:
   ADMIN:
+    Language:       Spanish
     first_name:     Gustavo
     last_name:      Martin
     email_address:  gu.martinm@gmail.com
@@ -8,6 +9,7 @@ sfGuardUser:
     is_super_admin: true
     is_active:      true
   DIA:
+    Language:       Spanish
     first_name:     Gustavo
     last_name:      Empresa
     email_address:  gu.empresadia@gmail.com
@@ -16,6 +18,7 @@ sfGuardUser:
     is_super_admin: false
     is_active:      true
   CARREFOUR:
+    Language:       Spanish
     first_name:     Gustavo
     last_name:      Empresa
     email_address:  gu.empresacarrefour@gmail.com
@@ -24,6 +27,7 @@ sfGuardUser:
     is_super_admin: false
     is_active:      true
   MOBILEADVERTISING:
+    Language:       Spanish
     first_name:     Gustavo
     last_name:      Empresa
     email_address:  gu.empresamobile@gmail.com
@@ -32,6 +36,7 @@ sfGuardUser:
     is_super_admin: false
     is_active:      true
   NORMAL_USER:
+    Language:       Spanish
     first_name:     Gustavo
     last_name:      Usuario
     email_address:  gu.usuario@gmail.com
