CompanyCategory and Ad table name field
We can retrieve the name field of these tables using the toString method.
They are smart enough and try to return the name field depending on the
user's language or rolling back to the default language.
Otherwise it returns a nice error message.

--- a/apps/companyfront/config/app.yml
+++ b/apps/companyfront/config/app.yml
@@ -5,6 +5,7 @@
 all:
   max_offices_on_pager: 3
   max_ads_on_pager: 2
+  default_language: eng                               # Everything must exist at least with this language
 
   sf_guard_plugin:
      remember_key_expiration_age: 2592000             # 30 days in seconds
