--- a/apps/companyfront/config/app.yml
+++ b/apps/companyfront/config/app.yml
@@ -3,10 +3,11 @@
 
 # default values
 all:
-  max_offices_on_pager: 3
-  max_ads_on_pager: 2
-  max_categories_on_pager: 3
-  default_language: eng                               # Everything must exist at least with this language
+  max_offices_on_pager:      3
+  max_ads_on_pager:          2
+  max_categories_on_pager:   3
+  default_picture_directory: /home/gustavo/symfonyreloaded/mobiads/web/uploads/images/
+  default_language:          eng                      # Everything must exist at least with this language
 
   sf_guard_plugin:
      remember_key_expiration_age: 2592000             # 30 days in seconds
