--- a/apps/companyfront/config/app.yml
+++ b/apps/companyfront/config/app.yml
@@ -18,3 +18,6 @@ all:
      remember_cookie_path:        /companyfront.php   # used by sfGuardSecurityUser.class.php. The scope of the Remeber cookie
      remember_cookie_domain:      .localhost
 
+  recaptcha:
+     private_key: 6Lcg9dESAAAAACrrfQ5l9OLp3nq93lN1ra1q-8Kn
+     public_key:  6Lcg9dESAAAAAG-QQLfE8By9c8ufO8WjuhBMz2-M
