--- a/apps/companyfront/config/app.yml
+++ b/apps/companyfront/config/app.yml
@@ -7,7 +7,7 @@ all:
   max_ads_on_pager:          2
   max_categories_on_pager:   3
   default_picture_directory: /home/gustavo/symfonyreloaded/mobiads/web/uploads/images/
-  default_language:          eng                      # Everything must exist at least with this language
+  default_language:          spa                      # Everything must exist at least with this language
   default_country:           Spain
 
   sf_guard_plugin:
