Custom web page error for users and companies.
It does not work during development just for production environment.

--- a/apps/companyfront/config/settings.yml
+++ b/apps/companyfront/config/settings.yml
@@ -42,3 +42,6 @@ all:
 
     secure_module:          sfGuardAuth
     secure_action:          secure
+
+    error_404_module: customerrors
+    error_404_action: error404
