--- a/apps/userfront/config/settings.yml
+++ b/apps/userfront/config/settings.yml
@@ -42,3 +42,6 @@ all:
 
     secure_module:          sfGuardAuth
     secure_action:          secure
+
+    error_404_module: customerrors
+    error_404_action: error404
